--- a/views/index.jade
+++ b/views/index.jade
@@ -16,88 +16,90 @@ html()
 
     body
         block body
-            ul(id="tabs", class="nav nav-tabs")
-                li(class="EURUSD")
-                    a(href="/?ticker=EURUSD") EUR/USD
-                li(class="USDJPY")
-                    a(href="/?ticker=USDJPY") USD/JPY
-                li(class="USDCAD")
-                    a(href="/?ticker=USDCAD") USD/CAD
-                li(class="GBPUSD")
-                    a(href="/?ticker=GBPUSD") GBP/USD
-                li(class="AUDUSD")
-                    a(href="/?ticker=AUDUSD") AUD/USD
-                li(class="NZDUSD")
-                    a(href="/?ticker=NZDUSD") NZD/USD
-                li(class="USDCNY")
-                    a(href="/?ticker=USDCNY") USD/CNY
-                li(class="USDINR")
-                    a(href="/?ticker=USDINR") USD/INR
-                li(class="USDMXN")
-                    a(href="/?ticker=USDMXN") USD/MXN
-                li(class="USDCHF")
-                    a(href="/?ticker=USDCHF") USD/CHF
-                li(class="USDPLN")
-                    a(href="/?ticker=USDPLN") USD/PLN
-                li(class="USDNOK")
-                    a(href="/?ticker=USDNOK") USD/NOK
-                li(class="USDDKK")
-                    a(href="/?ticker=USDDKK") USD/DKK
-                li(class="USDHUF")
-                    a(href="/?ticker=USDHUF") USD/HUF
-                li(class="USDSAR")
-                    a(href="/?ticker=USDSAR") USD/SAR
-                li(class="USDSEK")
-                    a(href="/?ticker=USDSEK") USD/SEK
-                li(class="USDSGD")
-                    a(href="/?ticker=USDSGD") USD/SGD
-                li(class="USDTHB")
-                    a(href="/?ticker=USDTHB") USD/THB
-                li(class="USDTRY")
-                    a(href="/?ticker=USDTRY") USD/TRY
-                li(class="USDTWD")
-                    a(href="/?ticker=USDTWD") USD/TWD
+            div(class="col-xs-16")
+                ul(id="tabs", class="nav nav-tabs")
+                    li(class="EURUSD")
+                        a(href="/?ticker=EURUSD") EUR/USD
+                    li(class="USDJPY")
+                        a(href="/?ticker=USDJPY") USD/JPY
+                    li(class="USDCAD")
+                        a(href="/?ticker=USDCAD") USD/CAD
+                    li(class="GBPUSD")
+                        a(href="/?ticker=GBPUSD") GBP/USD
+                    li(class="AUDUSD")
+                        a(href="/?ticker=AUDUSD") AUD/USD
+                    li(class="NZDUSD")
+                        a(href="/?ticker=NZDUSD") NZD/USD
+                    li(class="USDCNY")
+                        a(href="/?ticker=USDCNY") USD/CNY
+                    li(class="USDINR")
+                        a(href="/?ticker=USDINR") USD/INR
+                    li(class="USDMXN")
+                        a(href="/?ticker=USDMXN") USD/MXN
+                    li(class="USDCHF")
+                        a(href="/?ticker=USDCHF") USD/CHF
+                    li(class="USDPLN")
+                        a(href="/?ticker=USDPLN") USD/PLN
+                    li(class="USDNOK")
+                        a(href="/?ticker=USDNOK") USD/NOK
+                    li(class="USDDKK")
+                        a(href="/?ticker=USDDKK") USD/DKK
+                    li(class="USDHUF")
+                        a(href="/?ticker=USDHUF") USD/HUF
+                    li(class="USDSAR")
+                        a(href="/?ticker=USDSAR") USD/SAR
+                    li(class="USDSEK")
+                        a(href="/?ticker=USDSEK") USD/SEK
+                    li(class="USDSGD")
+                        a(href="/?ticker=USDSGD") USD/SGD
+                    li(class="USDTHB")
+                        a(href="/?ticker=USDTHB") USD/THB
+                    li(class="USDTRY")
+                        a(href="/?ticker=USDTRY") USD/TRY
+                    li(class="USDTWD")
+                        a(href="/?ticker=USDTWD") USD/TWD
 
-                li(class="USDZAR")
-                    a(href="/?ticker=USDZAR") USDZAR
-            table(class="table table-striped table-condensed")
-                th Sentiment
-                th Most Recent
-                th rolling 24hr average
-                tr
-                    td Bullish
-                    td(id="recentBull")
-                    td(id="avgBull")
-                tr
-                    td Bearish
-                    td(id="recentBear")
-                    td(id="avgBear")
+                    li(class="USDZAR")
+                        a(href="/?ticker=USDZAR") USDZAR
+                table(class="table table-striped table-condensed table-hover")
+                    tr
+                        th Sentiment
+                        th Most Recent
+                        th rolling 24hr average
+                    tr
+                        td Bullish
+                        td(id="recentBull")
+                        td(id="avgBull")
+                    tr
+                        td Bearish
+                        td(id="recentBear")
+                        td(id="avgBear")
 
-            div(id="chartContainer")
-                div(id="chartControls", style="display:none")
-                    div(id="chartSize")
-                        span(id="zoomOut", class="minus") -
-                        span(id="zoomIn",class="plus") -
-                    div(id="home", class="home btn", style="display:none")
-                        span Today
-                div(id="iconsTemplate", class="icons", style="display: none;")
-                    div(id="iconsTitle") Title
-                    div(class="btn icon")
-                        span(class="up") &nbsp;
-                    div(class="btn icon")
-                        span(class="focus") &nbsp;
-                    div(class="btn icon")
-                        span(class="down") &nbsp;
-                    div(class="btn icon")
-                        span(class="close") &nbsp;
-                div(id="handleTemplate", class="handle", style="display: none;")
-                    span Drag
-                div(id="floatDate", class="hd", style="display: none;")
-                div(id="floatVolume", class="hd", style="display: none;")
-                div(id="floatHR", class="vd", style="display: none;")
-                div(id="currentHR", class="vd", style="display: none;")
-                div(id="crossY", class="stx_crosshair", style="display: none;")
-                div(id="crossX", class="stx_crosshair", style="display: none;")
+                div(id="chartContainer")
+                    div(id="chartControls", style="display:none")
+                        div(id="chartSize")
+                            span(id="zoomOut", class="minus") -
+                            span(id="zoomIn",class="plus") -
+                        div(id="home", class="home btn", style="display:none")
+                            span Today
+                    div(id="iconsTemplate", class="icons", style="display: none;")
+                        div(id="iconsTitle") Title
+                        div(class="btn icon")
+                            span(class="up") &nbsp;
+                        div(class="btn icon")
+                            span(class="focus") &nbsp;
+                        div(class="btn icon")
+                            span(class="down") &nbsp;
+                        div(class="btn icon")
+                            span(class="close") &nbsp;
+                    div(id="handleTemplate", class="handle", style="display: none;")
+                        span Drag
+                    div(id="floatDate", class="hd", style="display: none;")
+                    div(id="floatVolume", class="hd", style="display: none;")
+                    div(id="floatHR", class="vd", style="display: none;")
+                    div(id="currentHR", class="vd", style="display: none;")
+                    div(id="crossY", class="stx_crosshair", style="display: none;")
+                    div(id="crossX", class="stx_crosshair", style="display: none;")
             script(src="/bower_components/jquery/jquery.min.js")
             script(src="/js/socket.io-client/dist/socket.io.min.js")
             script(src="/js/chartiq/stxChart.js")
