--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+.avgDay{
+    color:#B38315
+}
+
+.avgMin{
+    color:#138522
+}
+
 /* --------------------------------------------------------- GENERAL STYLES --------------------------------------------------------- */
 
 textarea, input {
